# infra-inventory

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
infra_dashboard/: consul_client.py
infra_dashboard/templates/: index.html
infra_inventory/: app.py  config.py  consul_client.py
infra_inventory/templates/: index.html  inventory.html
